lifted z-index of modal close button as hacky way to fix hover bug

--- a/application/ui/src/components/Modal/Modal.css
+++ b/application/ui/src/components/Modal/Modal.css
@@ -77,6 +77,7 @@
         }
 
         .close-button {
+            z-index: 2;
             position: absolute;
             top: 0;
             right: 0;
